tests/NormalTests/paczka1/fuzzy1/13482055.err
Error in line 6: KHQPqy S756 99,50
Error in line 3: s5j5ri90zy9 A317 33,1
Error in line 10: s5j5ri90zy9 S756 2,3
Error in line 25: CHIcZlePIeB S756 40,8
Error in line 40: Aqvm S756 -2,5
